[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tiles/5_Classroom_and_Library_Singles/1.png" type="Texture" id=1]
[ext_resource path="res://Tiles/5_Classroom_and_Library_Singles/2.png" type="Texture" id=2]
[ext_resource path="res://Tiles/5_Classroom_and_Library_Singles/3.png" type="Texture" id=3]
[ext_resource path="res://World/Espacos/SalaDeAula/Cards.gd" type="Script" id=4]

[node name="Cards" type="Area2D"]
script = ExtResource( 4 )

[node name="Card3" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Card3"]
position = Vector2( 185.667, 183.25 )
scale = Vector2( 0.620833, 0.620833 )
texture = ExtResource( 3 )

[node name="Card2" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Card2"]
position = Vector2( 186.267, 182 )
scale = Vector2( 0.616667, 0.616667 )
texture = ExtResource( 2 )

[node name="Card1" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Card1"]
position = Vector2( 186, 183 )
scale = Vector2( 0.616667, 0.616667 )
texture = ExtResource( 1 )
